# scene-scheduler

./: .gitignore  Cargo.toml  README.md
src/: config.rs  gui.rs  ics.rs  main.rs  scheduler.rs  sorting.rs  structures.rs
src/io/: mod.rs  parsing.rs
tests/data/: test_scedule.xlsx  test_schedule.xlsx
