[package]
name = "scene-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.19.1", features = ["dates"] }
chrono = "0.4"
chrono-tz = "0.8.0"
ics = "0.5"
md5 = "0.7.0"
